--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -1,14 +1,30 @@
-TARGET := iphone:clang:14.5:14.0
-INSTALL_TARGET_PROCESSES = SpringBoard
-THEOS_PACKAGE_SCHEME=rootless
+name: Xcode - Build and Analyze
 
-include $(THEOS)/makefiles/common.mk
+ on:
+   push:
+     branches: [ "main" ]
+   pull_request:
+     branches: [ "main" ]
 
-TWEAK_NAME = dynamicmainland
+ jobs:
+   build:
+     name: Build and analyse default scheme using xcodebuild command
+     runs-on: iphoneos-latest
 
-dynamicmainland_FILES = $(wildcard *.xm)
-dynamicmainland_CFLAGS = -fobjc-arc
-
-include $(THEOS_MAKE_PATH)/tweak.mk
-SUBPROJECTS += dynamicmainlandprefs
-include $(THEOS_MAKE_PATH)/aggregate.mk
+     steps:
+       - name: Checkout
+         uses: actions/checkout@v3
+       - name: Set Default Scheme
+         run: |
+           scheme_list=$(xcodebuild -list -json | tr -d "\n")
+           default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
+           echo $default | cat >default
+           echo Using default scheme: $default
+       - name: Build
+         env:
+           scheme: ${{ 'default' }}
+         run: |
+           if [ $scheme = default ]; then scheme=$(cat default); fi
+           if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
+           file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
+           xcodebuild clean build analyze -scheme "$scheme" -"$filetype_parameter" "$file_to_build" | xcpretty && exit ${PIPESTATUS[0]}
